gitops/base-install/argocd/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: ARGOCD_SERVER_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - secretName: argocd-server-tls # do not change https://argo-cd.readthedocs.io/en/stable/operator-manual/tls/#tls-certificates-used-by-argocd-server
      hosts:
        - ARGOCD_SERVER_HOST
